[project]
name = "dbsync"
version = "0.1.0"
description = "A CLI to sync a Dropbox folder to the local filesystem."
authors = [
    {name = "Jelle Smet", email = "development@smetj.bet"},
]

dependencies = [
    "click==8.1.5",
    "arrow==1.2.3",
    "dropbox==12.0.2"
]

[project.urls]
homepage = "https://github.com/smetj/dbsync"
repository = "https://github.com/smetj/dbsync"

[build-system]
requires = [
    "setuptools>=42",
    "wheel>=0.33.0",
    "cython>=0.29.33",
]

[tool.setuptools.packages]
find = {}

[project.scripts]
dbsync = "dbsync:main"
